--- a/qformat.html
+++ b/qformat.html
@@ -6,6 +6,11 @@
         <meta name="keywords" content="q-fomat, fixed-point, floating-point, convert, calculate">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Q-format Converter</title>
+        <meta property="og:title" content="Q-format Converter" />
+        <meta property="og:url" content="https://chummersone.github.io/qformat.html" />
+        <meta property="og:locale" content="en_GB" />
+        <meta property="og:description" content="Convert between floating-point and Qm.n fixed-point values">
+        <meta property="og:site_name" content="chummersone.github.io" />
         <link rel="stylesheet" href="https://chummersone.github.io/assets/css/style.css?v=f6040d589f1187e6eaa1ec97f2b3af33299fb0ad">
         <style>
             html {
