Tweak layout of bit positions

--- a/qformat.html
+++ b/qformat.html
@@ -46,10 +46,6 @@
                 padding: 20px;
             }
 
-            fieldset.full-width {
-                max-width: 846px;
-            }
-
             legend {
                 font-weight: bold;
             }
@@ -771,8 +767,10 @@
                 </div>
             </fieldset><!--
 
-        ---><fieldset class="full-width">
+        ---><fieldset>
                 <legend>Bit Positions</legend>
+
+                <p>Display the bit positions and corresponding values.</p>
 
                 <table id="bit-pos">
                     <tr id="bit-positions">
