Tweaks to bit positions style

--- a/qformat.html
+++ b/qformat.html
@@ -154,6 +154,7 @@
                 border-bottom: 1px solid white;
                 border-right: 1px solid white;
                 text-align: right;
+                color: #444;
             }
 
             tr:last-of-type td, tr:last-of-type th {
