Minor layout tweaks

--- a/qformat.html
+++ b/qformat.html
@@ -100,6 +100,7 @@
                 padding-right: 5px;
                 text-align: center;
                 width: 100%;
+                margin: 0px 0;
             }
 
             label::after {
@@ -123,7 +124,7 @@
             }
 
             .control-grp {
-                margin: 5px 0;
+                margin: 8px 0;
             }
 
             /* Clear floats after the columns */
@@ -743,30 +744,32 @@
                     </div>
                 </div>
 
-                <p>Bit positions and values:</p>
+                <div class="control-grp">
+                    <label>Bit positions and values</label>
 
-                <table id="bit-pos">
-                    <tr id="bit-positions">
-                        <th>Bit Position</th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr id="bit-values">
-                        <th>Bit Value</th>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
+                    <table id="bit-pos">
+                        <tr id="bit-positions">
+                            <th>Bit Position</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr id="bit-values">
+                            <th>Bit Value</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </div>
             </fieldset><!--
 
         ---><fieldset>
