Keep table 100% width

--- a/qformat.html
+++ b/qformat.html
@@ -125,6 +125,7 @@
 
             .control-grp {
                 margin: 8px 0;
+                width: 100%;
             }
 
             /* Clear floats after the columns */
@@ -147,6 +148,7 @@
                 border-collapse: collapse;
                 border-radius: 4px;
                 overflow: hidden;
+                width: 100%;
             }
 
             th, td {
