Error check when updating num bits

--- a/qformat.html
+++ b/qformat.html
@@ -582,6 +582,7 @@
 
                 $(numBitsID).change(function () {
                     setFormNumBits();
+                    $(integerID).trigger('change');
                 });
 
                 $(numFracBitsID).change(function () {
