Tweak lock layout

--- a/qformat.html
+++ b/qformat.html
@@ -127,7 +127,7 @@
                 content: "🔒";
                 position: absolute;
                 right: -20px;
-                top: 12px;
+                bottom: 12px;
             }
 
             .control-grp {
