Fix handling of signed change

--- a/qformat.html
+++ b/qformat.html
@@ -228,6 +228,9 @@
 
                 $(signedID).change(function () {
                     getFormSigned();
+                    if (~userChangedFloat) {
+                        getFormInteger();
+                    }
                     update();
                 });
 
