Update CSS for iOS 15

--- a/qformat.html
+++ b/qformat.html
@@ -94,6 +94,10 @@
                 opacity: 1; /* required on iOS */
             }
 
+            input, select, p, label, th, td, legend {
+                color: black;
+            }
+
             /* Style the label to display next to the inputs */
             label {
                 display: inline-block;
